<resources>
    <string name="app_name">OnBoardingScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="be_a_blood_donor">Be A Blood Donor</string>
    <string name="become_a_blood_donor_save_lives"><![CDATA[Become A Blood Donor & Save Lives]]></string>
    <string name="user_will_be_able">Users will be able to create a donor account and will be able to save lives.</string>
    <string name="emergency_mode_is_there">Emergency Mode Is There For You</string>
    <string name="find_blood_donors"><![CDATA[Find Blood Donors & Request For Blood]]></string>
    <string name="find_a_donor">Find A Donor</string>
    <string name="emergency_mode">Emergency Mode</string>
    <string name="on_board_str_skip">Skip</string>
    <string name="on_board_str_get_started">Get started</string>
    <string name="on_board_str_back">Back</string>

    <string name="in_case_of_emergency">In case of emergency, users will be able to get contact numbers of public account of donors.</string>
    <string name="users_will_be_able_to_create">Users will be able to create a donor account and will be able to save lives.</string>



</resources>