<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PlaceholderFragment"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/place_holder_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        tools:text="@string/be_a_blood_donor"
        android:textColor="@color/black"
        android:padding="@dimen/padding_normal"
        android:textSize="@dimen/bigger_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/place_holder_tv_title_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_large"
        tools:text="@string/become_a_blood_donor_save_lives"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_bigger_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_holder_tv_title" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/place_holder_tv_img_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_holder_tv_title_sub">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/place_holder_lottie_anim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/place_holder_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="TODO"
            android:scaleType="fitCenter"
            android:visibility="gone" />


    </FrameLayout>

    <TextView
        android:id="@+id/place_holder_tv_img_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_nav_margin"
        android:gravity="center"
        android:padding="@dimen/padding_normal"
        tools:text="@string/user_will_be_able"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>