<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardActivity"
    android:id="@+id/parent_layout">
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/on_boarding_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="bottom"
        android:alpha="0.12"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/on_boarding_btn_skip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:text="@string/on_board_str_skip"
            android:textColor="@color/colorPrimaryDark" />
        <Button
            android:id="@+id/on_boarding_btn_back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="start|center"
            android:text="@string/on_board_str_back"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/intro_indicator_0"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/intro_indicator_1"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/intro_indicator_2"
                android:layout_width="@dimen/_8sdp"
                android:layout_height="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/margin_small"
                android:background="@drawable/indicator_unselected"
                android:contentDescription="TODO" />

            <!-- Your other 2 indicators here -->

        </LinearLayout>

        <!-- This overlaps the next button in the last slide -->
        <Button
            android:id="@+id/on_boarding_btn_get_started"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/on_board_str_get_started"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/on_boarding_btn_next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_right"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="TODO" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>